--- a/test/exen_nav_test/master.css
+++ b/test/exen_nav_test/master.css
@@ -85,15 +85,43 @@ a{
 }
 
 
-/* top2 */
+/* top2 
 .top2{
     background: #333;
+}
+.top2>.top2-1{
     overflow: hidden;
+    width: 900px;
+    margin: 0 auto;
+    padding: 5px;
 }
 .top2>.top2-1>li{
     float: left;
     padding: 0 10px;
 }
 .top2>.top2-1>li>a{
-    color: #fff;
+    color: #8C8C9B;
+}
+.top2>.top2-1>li:last-child>a{
+    color: aqua;
+}
+*/
+.top2{
+    background: #333;
+}
+.top2>.top2-1{
+    width: 900px;
+    margin: 0 auto;
+    padding: 5px;
+    text-align: center;
+}
+.top2>.top2-1>li{
+    display: inline-block;
+    padding: 0 10px;
+}
+.top2>.top2-1>li>a{
+    color: #8C8C9B;
+}
+.top2>.top2-1>li:last-child>a{
+    color: aqua;
 }
