--- a/14day/css/nav.css
+++ b/14day/css/nav.css
@@ -3,6 +3,9 @@
     float: left;
     position: relative;
 }
+#lnb>.lnb-inner>ul>li:hover>.subMenu{
+    display: block;
+}
 #lnb>.lnb-inner>ul>li>a{
     display: block;
     line-height: 40px;
@@ -25,6 +28,7 @@
     width: 80px;    
     background: rgba(255, 255, 255, 0.8); /*rgba 중 a값은 투명도*/
     border: 1px solid #ccc;
+    display: none;
 }
 .subMenu>li>a{
     display: block;
