--- a/18day/nanum-master.css
+++ b/18day/nanum-master.css
@@ -16,15 +16,15 @@
         position: relative;
     }
     #nanum-bbs>#header{
-            width:100%; 
-            background:url(image/bg.jpg);
-            overflow: hidden;
+        width:100%; 
+        background:url(image/bg.jpg);
+        overflow: hidden;
     }
     .header-box{
-            width:900px; 
-            margin:0 auto;
-            position:relative;
-    }
+        width:900px; 
+        margin:0 auto;
+        position:relative;
+}
     nav.lnb{
         width:100%;
         height:60px;
@@ -37,41 +37,41 @@
         border:1px solid red;
     }
     #nanum-bbs>#contents{
-            width:900px; 
-            overflow: hidden;
-            margin:0 auto;
-            padding-bottom:90px;
+        width:900px; 
+        overflow: hidden;
+        margin:0 auto;
+        padding-bottom:90px;
     }
     .left{
-            width:224px;
-            float:left;
+        width:224px;
+        float:left;
     }
     .conTop{
-            background: url(image/box.jpg)no-repeat;
-            height: 317px;
-            padding:25px 26px 15px;
-            margin-bottom:55px;
+        background: url(image/box.jpg)no-repeat;
+        height: 317px;
+        padding:25px 26px 15px;
+        margin-bottom:55px;
     }
     .conBottom{
-          margin-bottom:25px;
+        margin-bottom:25px;
     }
     .right{
-            width:640px;
-            float:right;         
+        width:640px;
+        float:right;         
     }
     .location{
-            margin-bottom:38px;
+        margin-bottom:38px;
     }
     .bbs{margin-top:35px;}
     #footer1{
-            width:100%; 
-            height: 10px;
-            border-top:1px solid #9f9f9f;
+        width:100%; 
+        height: 10px;
+        border-top:1px solid #9f9f9f;
     }
     #footer2{
-            width:900px; 
-            padding:20px 0 40px;
-            margin:0 auto;
+        width:900px; 
+        padding:20px 0 40px;
+        margin:0 auto;
     }
 
     /*header style*/
@@ -138,6 +138,19 @@
         display: block;
         color: #fff;
         line-height: 32px;
+        position: relative;
+    }
+    .mainMenu>li>a::before{
+        content: '';
+        width: 1px;
+        height: 13px;
+        position: absolute;
+        left: 0;
+        top: 9px;
+        background: rgba(255,255,255,0.7);
+    }
+    .mainMenu>li:first-child>a::before{
+        width: 0;
     }
 
     /*contents style*/
