--- a/22day/master-유희연.css
+++ b/22day/master-유희연.css
@@ -23,15 +23,28 @@ body{
 #header{
     height: 170px;
     background: url(./images/header.gif) no-repeat 0 0;
-    position: relative;
 }   
 #oneCollayout #primaryContent{
-    height: 700px;
+    /* height: 700px; */
     margin:  0 0 20px 0;
+}
+#twoCollayout #primaryContent{
+    width: 555px;
+    height: 500px;
+    float: left;
+    margin: 0 0 20px 0;
+    /* background: #cb9ac4; */
+}
+#sideContent{
+    width: 180px;
+    height: 500px;
+    float: left;
+    /* background: #cfe192; */
 }
 #footer{
     height: 85px;
     background: url(./images/footer.gif) no-repeat 0 0;
+    clear: both;
 }
 .box{
     padding: 5px 10px;
@@ -40,96 +53,129 @@ body{
 }
 .cbb{
     background: #fff;
+    padding: 5px 10px 15px;
 }
+.cbside{
+    background: #fff;
+    margin-top: 5px;
+}
+
+
+/*style 내가 추가한거*/
+
+.cbside ul{
+    padding: 10px 0 8px 2px;
+}
+.cbside>ul>li{
+    border-bottom: 1px solid #e4e3e3;
+    padding: 1px;
+}
+label{
+    display: none;
+}
+fieldset{
+    border-style: none;
+}
+legend{
+    background: #df2725;
+    color: #fff;
+}
+fieldset{
+    margin: 0px;
+}
+#twoCollayout form,
+.cbside p{
+    margin: 0;
+    padding: 8px 0 0 5px;
+}
+
+
+
+/* nav style */
+nav.lnb{ 
+    padding-top: 70px;
+}
+nav.lnb>ul>li{
+    float:left;
+}
+nav.lnb>ul>li>a{
+    padding: 0 15px;
+    display: block;
+    line-height: 24px;
+    font-weight: bold;
+    position: relative;
+    color: #CAC78A;
+}
+nav.lnb>ul>li>a::before{
+    content: '';
+    width: 1px;
+    height: 13px;
+    position: absolute;
+    right: 0px;
+    top: 6px;
+    background: rgba(255,255,255,0.7);
+}
+
 
 /* text style */
 h1{
-    display: none;
+    text-indent: -9999em;
 }
 h2{
     background: #e3e2aa;
     color: #999860;
 }
-
-
-/* header style*/
-.lnb{
-    position: absolute;
-    left: 10px;
-    top:100px;
+h3{
+    background: #efd044;
+    margin-left: 3px;
+    display: inline;
+    margin-left: 7px;
 }
-.lnb>li{
-    float:left;
-    margin: 0 10px;
-    position: relative;
-}
-#header>.lnb>li>a{
-    color: #999860;
-    display: block;
-    font-size: 10px;
-    font-weight: bold;
-}
-.lnb>li>a::before{
-    content: '';
-    width: 1px;
-    height: 13px;
-    position: absolute;
-    right: -10px;
-    top: 1px;
-    border-right: 1px solid #ccc;
-}
-
-/* primaryContent style */
-h3,
 p,
 form{
-    position: relative;
+    margin: 5px 0 0 45px;
+    line-height: 18px;
+}
+.addresText{
+    margin-top: 20px;
+}
+#footer p{
+    padding: 50px 0 0 40px;
+    margin-left: 0;
+}
+#footer p a{
+    color : #cbc78a;
+    margin-right: 5px;
+    text-decoration: underline;    
+}
+
+
+/* img style */
+img{
+    float: left;
+}
+
+
+/* form style */
+#oneCollayout form{
     margin-left: 45px;
 }
-h3{
-    display: inline-block;
-    background: #efd044;
-    font-size: 10px;
-    margin-bottom: 5px;
+#oneCollayout form>ul>li{
+    margin: 3px 0;
 }
-img{
-    position: absolute;
-}
-.box>.cbb{
-    padding: 10px;
-}
-em{
-    font-weight: bold;
-}
-p{
-    line-height: 18px;
+#oneCollayout label{
+    display: block;
+    margin-bottom: 3px;
 }
 input,
 textarea{
-    background: #d6e9e7;
-    border-style: none;
+    outline-style: none;
+    border: none;
+    background: #d6e9e7; 
 }
-.formsection{
-    margin-bottom: 5px;
+input{
+    padding: 3px;
 }
-.formsection label{
-    display: block;
-    font-weight: bold;
-}
-input[type="email"],
-input[type="text"]{
-    width: 250px;
-    /* padding: 3px; */
-}
-
-
-/* footer style */
-#footer{
-    padding: 50px 36px;
-}
-#footer>a{
-    color : #cbc78a;
-    font-weight: bold;
-    text-decoration: underline;
-    margin: 0 5px;
+textarea{
+    resize: none;
 }
