--- a/23day/master-유희연.css
+++ b/23day/master-유희연.css
@@ -1,8 +1,6 @@
 /* basic style */
 *{margin: 0; padding: 0;}
-ul{
-    list-style: none;
-}
+ul{list-style: none;}
 a{
     text-decoration: none;
     color: #333;
@@ -25,21 +23,16 @@ body{
     background: url(./images/header.gif) no-repeat 0 0;
 }   
 #oneCollayout #primaryContent{
-    /* height: 700px; */
     margin:  0 0 20px 0;
 }
 #twoCollayout #primaryContent{
     width: 555px;
-    height: 500px;
     float: left;
     margin: 0 0 20px 0;
-    /* background: #cb9ac4; */
 }
 #sideContent{
     width: 180px;
-    height: 500px;
     float: left;
-    /* background: #cfe192; */
 }
 #footer{
     height: 85px;
@@ -57,47 +50,14 @@ body{
 }
 .cbside{
     background: #fff;
+    padding:5px 10px 15px;
     margin-top: 5px;
 }
 
 
-/*style 내가 추가한거*/
-
-.cbside ul{
-    padding: 10px 0 8px 2px;
-}
-.cbside>ul>li{
-    border-bottom: 1px solid #e4e3e3;
-    padding: 1px;
-}
-label{
-    display: none;
-}
-fieldset{
-    border-style: none;
-}
-legend{
-    background: #df2725;
-    color: #fff;
-}
-fieldset{
-    margin: 0px;
-}
-#twoCollayout form,
-.cbside p{
-    margin: 0;
-    padding: 8px 0 0 5px;
-}
-
-
-
 /* nav style */
-nav.lnb{ 
-    padding-top: 70px;
-}
-nav.lnb>ul>li{
-    float:left;
-}
+nav.lnb{padding-top: 70px;}
+nav.lnb>ul>li{float:left;}
 nav.lnb>ul>li>a{
     padding: 0 15px;
     display: block;
@@ -111,33 +71,51 @@ nav.lnb>ul>li>a::before{
     width: 1px;
     height: 13px;
     position: absolute;
-    right: 0px;
+    left: 0px;
     top: 6px;
     background: rgba(255,255,255,0.7);
+}
+nav.lnb>ul>li:first-child>a::before{background:none;}
+
+
+/* sideContent nav style */
+#sideContent .sideMenu>li>a{
+    display: block;
+    line-height: 20px;
+    border-bottom: 1px solid #e4e3e3;
+    color: #4a4a4a;
+    background: url(./images/ticks.gif) no-repeat 100% -20px; 
+}
+#sideContent .sideMenu>li>a:hover{
+    color: #d52c27;
+    background-position: 100% -40px;
 }
 
 
 /* text style */
-h1{
-    text-indent: -9999em;
-}
+h1{text-indent: -9999em;}
 h2{
     background: #e3e2aa;
     color: #999860;
 }
 h3{
     background: #efd044;
-    margin-left: 3px;
     display: inline;
-    margin-left: 7px;
+    margin-left: 8px;
 }
-p,
-form{
-    margin: 5px 0 0 45px;
-    line-height: 18px;
+p{margin: 5px 0 0 45px;}
+span{color: #616161;}
+#sideContent p{margin-left: 0 !important;}
+.addresText{margin-top: 20px;}
+.PageN>a{
+    text-decoration: underline;
+    border-left: 1px solid #4a4a4a;
+    padding: 0 5px;
+    color: #616161;
 }
-.addresText{
-    margin-top: 20px;
+.PageN>a:first-child{
+    border-left: 0; 
+    text-decoration: none;
 }
 #footer p{
     padding: 50px 0 0 40px;
@@ -151,18 +129,37 @@ form{
 
 
 /* img style */
-img{
-    float: left;
+img{float: left;}
+.webday{
+    padding-right: 10px;
+    background: url(./images/external.gif) no-repeat 100% 0;
+    text-decoration: underline;
+    color: #4a4a4a;
 }
-
+.photoGallery{
+    margin: 20px 0 25px 45px;
+    overflow: hidden;
+}
+.thumnail{
+    float: left;
+    width: 108px;
+    height: 74px;
+    background: url(./images/shadow.gif) no-repeat 100% 100%;
+    margin: 0 40px 20px 0;
+    position: relative;
+}
+.thumnail>img{
+    padding: 3px;
+    background: #fff;
+    border: 1px solid #ccc;
+    position: absolute;
+    left: -4px;
+    top:-4px;
+}
 
 /* form style */
-#oneCollayout form{
-    margin-left: 45px;
-}
-#oneCollayout form>ul>li{
-    margin: 3px 0;
-}
+#oneCollayout form{margin-left: 45px;}
+#oneCollayout form>ul>li{margin: 3px 0;}
 #oneCollayout label{
     display: block;
     margin-bottom: 3px;
@@ -173,9 +170,26 @@ textarea{
     border: none;
     background: #d6e9e7; 
 }
-input{
+input{padding: 3px;}
+textarea{resize: none;}
+
+
+/* twoCollayout form style */
+fieldset{
+    border: none;
+    margin: 15px 0 10px 0;
+}
+legend{
+    background: #e82744;
+    color: #fff;
     padding: 3px;
+    margin-bottom: 5px;
 }
-textarea{
-    resize: none;
+#twoCollayout label{display: none;}
+/* 접근성에서는 legend에서 사이트검색을 읽어주니까 label에서 text-indent 대신 display: none을 씀 */
+input[type="image"]{
+    background: #d7d493;
+    margin-bottom: -5px;
+    padding: 1px !important;
 }
+
