--- a/23day/master-유희연.css
+++ b/23day/master-유희연.css
@@ -168,6 +168,10 @@ img{float: left;}
     left: -4px;
     top:-4px;
 }
+#threeColLayout .cbb ul li{
+    margin: 0 !important;
+}
+
 
 /* form style */
 #oneCollayout form{margin-left:45px;}
