--- a/html5/01/master.css
+++ b/html5/01/master.css
@@ -1,1 +1,96 @@
 @import url('normalize.css');
+
+/* basic style */
+*{margin:0; padding:0;}
+ul,ol{list-style:none;}
+a{text-decoration:none; color:#333;}
+/*
+	1.레이아웃이 될 대상에 960px로 가운데 정렬
+	2.메인네비게이션을 가로 방향으로 펼쳐서 여백조절
+	3.aside의 영역은 240px로 지정해서 왼쪽에 위치 nav는 세로방향 유지
+	4.article의 영역은 650px로 지정해서 오른쪽으로 위치
+	5.article안에 있는 section은 300px로 지정하고 왼쪽 방향으로 위치
+	6.figure은 오른쪽 방향으로 위치
+*/
+
+
+/* layout style */
+header#mainHeader,
+nav#mainNav,
+div#contents,
+footer{
+	width: 960px;
+	margin: 0 auto;
+	padding: 20px;
+	/* border: 1px solid salmon; */
+	box-sizing: border-box;
+	/* css2 width값을 유지하면서 안쪽으로 border, padding를 적용하기 떄문에 가로너비가 늘어나지 않음. */
+}
+header#mainHeader{height: 160px;}
+nav#mainNav>ul{overflow: hidden;}
+nav#mainNav>ul>li{float: left;}
+nav#mainNav>ul>li>a{
+	display: block;
+	line-height: 40px;
+	padding: 0 20px;
+	color: #333;
+	position: relative;
+}
+nav#mainNav>ul>li>a::after{
+	content: '';
+	width: 1px;
+	height: 10px;
+	background: #000;
+	position: absolute;
+	left: 0;
+	top: 15px;
+}
+nav#mainNav>ul>li:nth-child(1)>a::after{width: 0;}
+div#contents{overflow: hidden;}
+aside{
+	width: 240px;
+	float: left;
+	padding: 10px;
+	box-sizing: border-box;
+}
+aside>nav{width: 100%;}
+aside>nav>ul{padding: 20px 0;}
+aside>nav>ul>li>a{
+	display: block;
+	line-height: 32px;
+	color: #333;
+	text-indent: 20px;
+	border-bottom: 1px solid #333;
+}
+main{
+	width: 650px;
+	float: right;
+	padding: 10px;
+	box-sizing: border-box;
+	margin-bottom: 20px;
+}
+article>header{
+	padding: 5px;
+	margin-bottom: 20px;
+}
+article>section{
+	float: left;
+	width: 300px;
+	/* background: thistle; */
+}
+article>figure{
+	float: right;
+	width: 300px;
+	padding: 10px;
+	box-sizing: border-box;
+}
+article>figcaption{padding: 10px;}
+article>article{
+	clear: both;
+	width: 100%;
+	margin-top: 20px;
+	/* background: lawngreen; */
+}
+footer{border-top: 3px double #ccc;}
+header#mainHeader,
+nav#mainNav{border-bottom: 3px double #ccc;}
