--- a/html5/01/normalize.css
+++ b/html5/01/normalize.css
@@ -285,7 +285,7 @@ button, input {line-height: normal; /* 1 */}
 
 button, input[type="button"], input[type="reset"], input[type="submit"] {
     cursor: pointer; /* 1 */
-    -webkit-appearance: button; /* 2 */
+    /* -webkit-appearance: button; 2 */
     overflow: visible;  /* 3 */
 }
 
@@ -305,7 +305,7 @@ input[type="checkbox"], input[type="radio"] {
  */
 
 input[type="search"] {
-    -webkit-appearance: textfield; /* 1 */
+    /* -webkit-appearance: textfield; 1 */
     -moz-box-sizing: content-box;
     -webkit-box-sizing: content-box; /* 2 */
     box-sizing: content-box;
