--- a/html5/03/grid.css
+++ b/html5/03/grid.css
@@ -214,7 +214,7 @@
 /* Push Space >> 12 Columns
 ----------------------------------------------------------------------------------------------------*/
 
-
+/* 포지션 값으로 위치를 잡음 */
 .container_12 .push_1 {
 	left:8.333%;
 }
@@ -343,6 +343,7 @@
 	display: inline-block;
 }
 
+/* 인터넷 버전이 낮을 때 사용 */
 * html .clearfix {
 	height: 1%;
 }
