--- a/html5/04/css/master.css
+++ b/html5/04/css/master.css
@@ -1,2 +1,131 @@
-@import url(base.css);
-@import url(reset.css);
+@import 'reset.css';
+@import 'base.css';
+
+/*font-face style*/
+@font-face{
+    font-family:'NanumGothic';
+    src:url('font/NanumGothic.woff') format('woff');     
+}
+@font-face{
+    font-family:'NanumGothicExtraBold';
+    src:url('font/NanumGothicExtraBold.woff') format('woff');
+}
+
+/*basic style*/
+img{vertical-align: top;}
+
+/*1024 이상일때=>데스크탑*/
+@media screen and (min-width:1024px){
+    body{
+        background: url(../images/body_bg.gif)repeat-x 0 0;
+        font-family:'NanumGothic';
+    }
+    /*header style*/
+    header#firstHeader{
+        width:1003px;
+        margin:0 auto;
+        position: relative;
+    }
+    header#firstHeader>h1{padding:30px 0 35px;}
+    #sform{
+        position: absolute;
+        right: 0;
+        top:60px;
+    }
+    .tbox{
+        background: #fefefe;
+        border:1px solid #ccc;
+        padding:2px 5px;
+    }
+    .gnb{
+        position: absolute;
+        right: 0;
+        top:20px;
+    }
+    .gnb>li{
+        float:left;
+        padding-left:25px;
+    }
+    #lnb{
+        position: relative;
+        width:100%;
+        height: 70px;
+    }
+    #lnb>ul{float:left;}
+    #lnb>ul>li{
+        float:left;
+        width:205px;
+        height: 39px;
+        background:#3da6d9;
+        margin-right:1px;
+        /*position: relative;*/
+    }
+    #lnb>ul>li>a.mm{
+        height: 30px;
+        padding-top: 10px;
+        text-align: center;
+        color: #fff;
+        display: block;
+    }
+    #lnb>ul>li:hover>a.mm{
+        background: url(../images/over_icon.gif)no-repeat 50% 100%;
+    }
+    #lnb>ul>li>ul{
+        position: absolute;
+        left:40px;
+        top:39px;
+        padding: 5px 0;
+        display: none;
+    }
+    #lnb>ul>li:hover>ul{display: block;}
+    #lnb>ul>li.m1>ul{left:38px;}
+    #lnb>ul>li.m2>ul{left:230px;}
+    #lnb>ul>li.m3>ul{left:402px;}
+    #lnb>ul>li.m4>ul{left:634px;}
+    #lnb>ul>li>ul>li{
+        float:left;
+        padding:0 10px;
+        width: auto; 
+        height: auto;
+    }
+    #lnb>ul>li>ul>li>a{display: block;}
+    .allMenu_view{
+        float: left;
+        width: 178px;        
+    }
+    .allMenu_view>a{
+        display: block;
+        width: 100%;
+        line-height: 39px;
+        background: #3da6d9 url(../images/btn_allmenu.gif)no-repeat 50% 0;
+        text-align: center;
+        color: #fff;
+    }
+    #allMenu_box{
+        width: 850px;
+        padding: 15px 30px;
+        border: 4px solid #369;
+        background: #fff url(../images/allMenu_bg.gif)repeat-x 0 0;
+        position: absolute;
+        left: 50%;
+        top: 105px;
+        margin-left: -459px;
+        /* display: none; */
+        z-index: 100;
+    }
+}
+
+
+
+
+
+/*768~1023 일때=>테블릿*/
+@media screen and (min-width:768px) and (max-width:1023px){
+    
+}
+
+/*767 이하일때=>모바일*/
+@media screen and (max-width:767px){
+    
+}
+
