--- a/html5/반응형웹/css/master.css
+++ b/html5/반응형웹/css/master.css
@@ -48,7 +48,7 @@ body header>.row{
 }
 #brand:hover:before{
     top: 35px;
-    transform: rotate(360deg);
+    transform: rotate(360deg); /* 별 회전 */
 }
 #gnb{
     position: absolute;
@@ -73,10 +73,153 @@ body header>.row{
 /* header-bar style::javascript start */
 #header-bar{
     position: relative;
-    top: -47px;
+    top: -50px;
     padding: 13px 0;
     background: rgba(38,38,38,0.4);
     transition: all 0.4s;
 }
 #header-bar>.row{margin-bottom: 0 ;}
+#header-bar.scrolled{background: #262626;}
+#header-bar.scrolled>.row{
+    display: flex; 
+    justify-content: space-between;
+}
+#header-bar>.row>p{
+    display: flex;
+    column-gap: 5px;
+    align-items: center;
+    position: relative;
+    top: 0;
+    margin: 0;
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: .04em;
+    color: #fff;
+}
 #header-bar>.row>p>a{display: none;}
+#header-bar.scrolled>.row>p>a{display: block;}
+#header-bar.scrolled>.row>ul{
+    display: flex;
+    column-gap: 10px;
+    align-items: center;
+}
+#header-bar.scrolled>.row>ul>li>a{
+    color: #fff;
+    font-weight: bold;
+    font-size: 16px;
+    text-shadow: 0 1px 2px #b3b3b3;
+    transition: all .3s ease-in-out;
+}
+#header-bar.scrolled>.row>ul>li>a:hover,
+#header-bar.scrolled>.row>ul>li>a:focus{
+    color: #b2765b;
+    text-shadow: none;
+}
+
+/* contents style */
+#contents h2,
+#contents h3{
+    margin-bottom: 40px;
+    border-bottom: 1px solid #e1dcda;
+    padding-bottom: 20px;
+    font: 24px/1.3 Serif;
+    color: #b2765b;
+}
+#contents #main li{
+    margin-bottom: 60px;
+    overflow: hidden;
+}
+#contents #main li img{
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+#contents h4,
+#contents h5{
+    font: 22px/24px Helvetica, Sans-Serif;
+    margin-bottom: 32px;
+}
+#contents h5{margin-top: 22px;}
+#contents li p{
+    font: 14px/24px Helvetica, Sans-Serif;
+    color: #818181;
+}
+
+/* footer style */
+footer{
+    border-top: 1px solid#e2e2e2;
+    padding-top: 20px;
+}
+footer p{
+    padding: 20px 40px;
+    background: url(../images/footer-logo.png) no-repeat 100% 50%;
+}
+::selection{
+    background: #eee7dd;
+    color: #542e1c;
+}
+
+/* 1024 less than */
+@media screen and (min-width:768px) and (max-width:1024px){
+    header,
+    #header-bar,
+    #contents,
+    footer{
+        width: 90%;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    footer p{padding: 20px 0;}
+}
+
+/* 768 less than */
+@media screen and (max-width:767px){
+    header .row #brand{
+        top:0;
+        left: 50%;
+        margin-left: -97px;
+    }
+    header .row #gnb{
+        position: static;
+        padding-top: 150px;
+        width: 90%;
+        margin: 0 auto;
+    }
+    header .row #gnb ul{
+        display: block; /*flex 준거를 없앤거*/
+    }
+    header .row #gnb ul li{
+        padding: 10px 30px;
+        margin-bottom: 1px;
+        border-top: 1px solid #555;
+        border-bottom: 1px solid #555;
+        background: rgba(56,56,56,0.3);
+        background: linear-gradient(to bottom,  rgba(56,56,56,0.3) 0%,rgba(0,0,0,0.5) 50%); 
+    }
+    header .row #gnb ul li:hover,
+    header .row #gnb ul li:focus,
+    header .row #gnb ul li:active{
+        background: linear-gradient(to bottom,  rgba(0,0,0,0.5) 0%,rgba(56,56,56,0.3) 50%); 
+    }
+    header .row #gnb ul li:first-child{border-radius: 15px 15px 0 0;}
+    header .row #gnb ul li:last-child{border-radius: 0 0 15px 15px;}
+    header .row #gnb ul li a{
+        color: #fff;
+        text-shadow: none;
+    }
+    header .row #gnb ul li a:hover,
+    header .row #gnb ul li a:focus{
+        color: #b2765b;
+    }
+    #contents #main li,
+    #contents #sub li{text-align: center;}
+    #contents #main img{
+        width: 90%;
+        padding: 10%;
+    }
+    #contents #sub img{border: 1px solid #e0e0e0;}
+    footer{padding-top: 0;}
+    footer p{
+        background: none;
+        padding-bottom: 0;
+    }
+}
